--- a/package.json
+++ b/package.json
@@ -18,21 +18,24 @@
     "@react-navigation/stack": "^5.12.6",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^7.8.0",
     "firebase-admin": "^9.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-crop-picker": "^0.35.2",
     "react-native-paper": "^4.4.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.15.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "styled-components": "^5.2.1",
-    "firebase": "7.8.0"
-
+    "expo-image-picker": "~9.1.1",
+    "expo-constants": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
