--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "expo": "~39.0.2",
+    "expo-constants": "~9.2.0",
+    "expo-image-picker": "~9.1.1",
     "expo-status-bar": "~1.0.2",
     "firebase": "^7.8.0",
     "firebase-admin": "^9.4.1",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -33,9 +36,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "styled-components": "^5.2.1",
-    "expo-image-picker": "~9.1.1",
-    "expo-constants": "~9.2.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
