--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-status-bar": "~1.0.2",
     "firebase": "^7.8.0",
     "firebase-admin": "^9.4.1",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -29,6 +30,7 @@
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.2",
+    "react-native-notifications": "^3.4.2",
     "react-native-paper": "^4.4.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.4",
